--- a/assets/css/form1.css
+++ b/assets/css/form1.css
@@ -1,33 +1,81 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Merriweather&family=Roboto+Slab:wght@300&family=Young+Serif&display=swap");
 body {
   height: 100vh;
   background-image: url("../image/img2.jpg");
   background-size: cover;
+  font-size: 15px;
+  font-family: "Roboto Slab", serif;
 }
 .container-fluid {
   height: fit-content;
-  width: 500px;
-  margin-top: 50px;
+  width: 470px;
+  margin-top: 50px !important;
 
-  background-color: rgb(243, 232, 232);
-  box-shadow: 3px 3px 2px gray, -3px -3px 2px gray;
+  padding: 1px !important;
+  box-shadow: 2px 2px 2px gray, -2px -2px 2px gray;
 }
 
 .form1 {
-  margin: 0;
-  padding: 0;
-  gap: 0;
+  padding: 5px;
+  background-color: white;
 }
-.word {
-  font-size: 19px;
+.word,
+.word1 {
+  margin-top: 0;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.word > span {
+  font-size: 15px;
 }
 
 .if {
   font-size: 10px;
+  color: red !important;
+}
+.wd,
+.Redio {
+  margin-top: 2px;
+}
+hr {
+  margin-bottom: 0;
+}
+.gender_Radio {
+  margin-top: 0;
+}
+.form-label {
+  margin-top: 4px;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 2px;
 }
 
+.wpform-label {
+  margin-top: 0;
+  font-size: 12px;
+  font-weight: 800;
+}
+
+input::placeholder {
+  font-size: 10px;
+}
+.first,
+.first1 {
+  margin-top: 5px;
+}
+.p {
+  margin-bottom: 2px;
+}
+
+.pw {
+  margin-top: 2px;
+  margin-bottom: 3px;
+}
 .inpt {
   border: 1px solid rgb(180, 176, 176);
   height: 25px;
+  margin-bottom: 6px;
 }
 .inp:hover {
   border: none;
@@ -40,33 +88,134 @@ body {
   display: flex;
   gap: 5px;
   font-size: 15px;
-  margin-bottom: 0;
+  margin-top: 3px;
 }
 
 /*  */
 .rbox {
   display: none;
 }
-.radio {
-  margin-bottom: 0 !important;
-}
-input[type="checkbox"]:not(:checked),
-input[type="checkbox"]:checked {
+
+.inck[type="checkbox"]:not(:checked),
+.inck[type="checkbox"]:checked {
   position: absolute;
   left: -9999%;
 }
 
-input[type="checkbox"] + label {
+.inck[type="checkbox"] + label {
+  display: inline-block;
+  padding: 3px 3px;
+  font-size: 10px;
+  font-weight: bold;
+  border-radius: 20px;
+  color: black;
+  background-color: #d3edea;
+}
+
+.inck[type="checkbox"]:checked + label {
+  color: white;
+  background-color: #0b7a75;
+  transition: 1s;
+}
+
+/*  */
+
+.rinput[type="radio"]:not(:checked),
+.rinput[type="radio"]:checked {
+  position: absolute;
+  left: -9999%;
+}
+
+.rinput[type="radio"] + label {
   display: inline-block;
   padding: 4px 5px;
   font-size: 10px;
   font-weight: bold;
   border-radius: 20px;
-  color: #157145;
-  background-color: hwb(142 77% 5%);
+  color: black;
+  background-color: #d3edea;
 }
 
-input[type="checkbox"]:checked + label {
+.rinput[type="radio"]:checked + label {
   color: white;
-  background-color: #157145;
+  background-color: #0b7a75;
+  transition: 1s;
+}
+
+/*  */
+
+.btn1,
+.btn2,
+.btn3,
+.btn4,
+.btn5,
+.pre_btn1,
+.pre_btn2,
+.pre_btn3,
+.pre_btn4 {
+  color: white;
+  font-size: 12px;
+  padding: 2px 6px;
+  background-color: blueviolet;
+}
+.btn1:hover,
+.btn2:hover,
+.btn3:hover,
+.btn4:hover,
+.btn5:hover,
+.pre_btn1:hover,
+.pre_btn2:hover,
+.pre_btn3:hover,
+.pre_btn4:hover {
+  background-color: #2196f3;
+  color: white;
+}
+
+.inptt {
+  width: 438px;
+  border: 1px solid rgb(180, 176, 176);
+  height: 25px;
+  margin-bottom: 5px;
+}
+
+/* 2form */
+.sub1 {
+  display: flex;
+  justify-content: flex-end;
+}
+.sub2,
+.sub3,
+.sub4,
+.sub5 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.word2 {
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.cp {
+  font-size: 10px;
+  font-weight: 600;
+  margin-bottom: 9px;
+  color: rgb(71, 68, 68);
+}
+
+.inputc {
+  font-size: 10px;
+}
+
+.inl {
+  font-size: 12px;
+  font-weight: bolder;
+  margin-bottom: 7px;
+  color: black;
+}
+
+.red {
+  font-size: 12px;
+  font-weight: bolder;
 }
