--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,15 +16,15 @@
   border: none;
   background-color: #6dd3dd;
   border-radius: 5px;
+  color: white;
 }
 
 #apply-btn:hover {
-  border: 3px solid white;
+  background: linear-gradient(90deg, teal, white);
 }
-button > a {
+a {
   text-decoration: none;
-  color: white;
 }
-button > a:hover {
+a > button:hover {
   color: #f35b04;
 }
