--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,6 @@
   background-image: url("../image/img1.jpeg");
   background-size: cover;
   height: 100vh;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,6 +16,8 @@
   background-color: #6dd3dd;
   border-radius: 5px;
   color: white;
+  position: absolute;
+  top: -50px;
 }
 
 #apply-btn:hover {
